Fix Debug build on Monterey (Missing SoftLinked classes) https://bugs.webkit.org/show_bug.cgi?id=264858 rdar://118433817

Reviewed by Alex Christensen.

Monterey has at least one softlinked framework in place, but with a class that is missing.
The build was fine, but oh boy was using it in a Debug configuration very unhappy.

This situation used to be fine when we looked up allowed classes in a Vector (search for null is fine)
After we moved to looking up allowed classes in a HashSet...  Search for null is no longer fine.

This change simply null checks any softlinked class being looked up in the set.

* Source/WebKit/Shared/Cocoa/ArgumentCodersCocoa.mm:
(IPC::shouldEnableStrictMode):

Canonical link: https://commits.webkit.org/270754@main